--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -47,9 +47,15 @@ Note: Each lecture is a topic, not a day of class.
 20. [Central Limit Theorem Proof](17_z1_central_limit_theorem_proof.pdf)
 21. [Linear Approximation to Exponential](18_exp_approx.pdf)
 22. [Exponential Approximation](19_exp_def_approx.pdf)
-23. Interval Estimates for Means
-24. Hypothesis Testing for Means
-25. And more ...
+23. [Interval Estimates for Means](20_ci_mean.pdf)
+24. [Hypothesis Testing for Means](21_testing_mean.pdf)
+25. Inference for Means in Small Samples
+26. Matched Pairs t-tests
+27. Two Sample t-tests
+28. Inference for Proportions
+29. Simple Linear Regression
+30. Analysis of Variance
+31. Multiple Linear Regression
 
 # Stat Comics That Made Me Laugh
 - SMBC:
